--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "recharts": "^3.2.1"
@@ -26,6 +27,7 @@
     "@eslint/js": "^9.35.0",
     "@tailwindcss/cli": "^4.1.13",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
