--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "jsx": "react-jsx",
-    "lib": ["ES2020", "DOM"],
     "moduleResolution": "Bundler",
-    "allowJs": true,
-    "checkJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true,
+    "jsx": "react-jsx",
+
     "strict": true,
-    "types": ["react", "react-dom"]
+    "skipLibCheck": true,
+
+    "allowJs": true,
+    "checkJs": false
   },
-  "include": ["src"]
+  "include": ["src", "src/types/**/*.d.ts"]
 }
